--- a/components/FollowerCounter/FollowerCounter.scss
+++ b/components/FollowerCounter/FollowerCounter.scss
@@ -1,7 +1,24 @@
-// h1 {
-//   font-weight: 500;
-// }
+@import "../vars";
 
-.follower-counter h1 {
-  font-weight: 500;
+.follower-counter {
+  background: $black;
+  padding: 16px 20px;
+  border-radius: 10px;
+  width: fit-content;
+
+  svg {
+    filter: drop-shadow(4px -4px 5px $light_50);
+  }
+
+  h1 {
+    font-size: 64px;
+    font-weight: 600;
+    color: $light;
+    margin: 0;
+    text-shadow: 4px 4px 4px $light_50;
+  }
+
+  span {
+    color: $teal;
+  }
 }
