--- a/components/_vars.scss
+++ b/components/_vars.scss
@@ -1,4 +1,9 @@
+// Primary palette
+
 $black: rgb(34, 40, 49);
 $grey: rgb(57, 62, 70);
 $teal: rgb(0, 173, 181);
 $light: rgb(238, 238, 238);
+
+// Secondary palette
+$light_50: rgba(238, 238, 238, 0.5);
