username and currentgame components

--- a/components/_vars.scss
+++ b/components/_vars.scss
@@ -5,5 +5,7 @@ $grey: rgb(57, 62, 70);
 $teal: rgb(0, 173, 181);
 $light: rgb(238, 238, 238);
 
-// Secondary palette
+// Secondary palettes
+$teal_50: rgba(0, 173, 181, 0.5);
+$teal_80: rgba(0, 173, 181, 0.8);
 $light_50: rgba(238, 238, 238, 0.5);
