be right back screen

--- a/components/HomePage/HomePage.scss
+++ b/components/HomePage/HomePage.scss
@@ -3,11 +3,13 @@
 .homepage {
   background-color: $black;
   padding: 18px 24px;
+  display: grid;
 
   a {
     color: $light;
     text-decoration: none;
     padding-right: 24px;
+    padding-bottom: 10px;
     transition: all ease-in 0.25s;
 
     &:hover {
