--- a/components/_vars.scss
+++ b/components/_vars.scss
@@ -1,11 +1,10 @@
 // Primary palette
-
 $black: rgb(34, 40, 49);
 $grey: rgb(57, 62, 70);
 $teal: rgb(0, 173, 181);
 $light: rgb(238, 238, 238);
 
-// Secondary palettes
+// Secondary palette
 $teal_50: rgba(0, 173, 181, 0.5);
 $teal_80: rgba(0, 173, 181, 0.8);
 $light_50: rgba(238, 238, 238, 0.5);
