--- a/components/BeRightBack/BeRightBack.scss
+++ b/components/BeRightBack/BeRightBack.scss
@@ -18,9 +18,9 @@
     position: fixed;
     top: 50%;
     left: 50%;
-    margin-top: -80px;
-    margin-left: -340px;
-
+    width: 100%;
+    transform: translate(-50%, -50%);
+    text-align: center;
     font-size: 128px;
     font-weight: 900;
     color: $light;
